--- a/Aplikace_rehabilitace/app/src/main/res/layout/fragment_add_user.xml
+++ b/Aplikace_rehabilitace/app/src/main/res/layout/fragment_add_user.xml
@@ -45,28 +45,6 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView"
         app:srcCompat="@drawable/hedgehog" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputLayout"
-        android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="24dp"
-        android:hint="@string/jm_no_pacienta"
-        app:boxStrokeColor="@color/colorBlue"
-        app:boxStrokeErrorColor="@color/mtrl_error"
-        app:hintTextColor="@color/colorBlue"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/textEditText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:id="@+id/addUserButton2"
@@ -80,6 +58,90 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/weightTextInputBox"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
+        android:backgroundTint="@color/colorBlue"
+        android:hint="@string/hmotnost"
+        android:textColorHint="@color/colorBlue"
+        app:boxBackgroundMode="outline"
+        app:boxStrokeColor="@color/colorBlue"
+        app:boxStrokeWidth="1dp"
+        app:hintTextColor="@color/colorBlue"
+        app:layout_constraintBottom_toTopOf="@+id/addUserButton2"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ageTextInputBox">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/weightTextInput"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:numeric="integer" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/ageTextInputBox"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
+        android:backgroundTint="@color/colorBlue"
+        android:hint="@string/v_k"
+        android:textColorHint="@color/colorBlue"
+        app:boxBackgroundMode="outline"
+        app:boxStrokeColor="@color/colorBlue"
+        app:boxStrokeWidth="1dp"
+        app:hintTextColor="@color/colorBlue"
+        app:layout_constraintBottom_toTopOf="@+id/weightTextInputBox"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/nameTextInputBox">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/ageTextInput"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:numeric="integer" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/nameTextInputBox"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
+        android:backgroundTint="@color/colorBlue"
+        android:hint="@string/jm_no_pacienta"
+        android:textColorHint="@color/colorBlue"
+        app:boxBackgroundMode="outline"
+        app:boxStrokeColor="@color/colorBlue"
+        app:boxStrokeWidth="1dp"
+        app:hintTextColor="@color/colorBlue"
+        app:layout_constraintBottom_toTopOf="@+id/ageTextInputBox"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:layout_constraintVertical_chainStyle="packed">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/nameTextInput"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </com.google.android.material.textfield.TextInputLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
