--- a/Aplikace_rehabilitace/app/src/main/res/layout/fragment_send_request.xml
+++ b/Aplikace_rehabilitace/app/src/main/res/layout/fragment_send_request.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <Button
-        android:id="@+id/btnSendRequest"
+        android:id="@+id/sendRequestButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -64,7 +64,7 @@
         android:fontFamily="@font/roboto"
         android:text="@string/zaruceni_rychle_odpovedi"
         android:textAlignment="center"
-        app:layout_constraintBottom_toTopOf="@+id/btnSendRequest"
+        app:layout_constraintBottom_toTopOf="@+id/sendRequestButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
