--- a/Aplikace_rehabilitace/app/src/main/res/navigation/nav_graph.xml
+++ b/Aplikace_rehabilitace/app/src/main/res/navigation/nav_graph.xml
@@ -26,5 +26,28 @@
     <fragment
         android:id="@+id/homeScreenFragment"
         android:name="com.example.aplikace_rehabilitace.ui_.HomeScreenFragment"
-        android:label="HomeScreenFragment" />
+        android:label="HomeScreenFragment" >
+        <action
+            android:id="@+id/action_homeScreenFragment_to_sendRequestFragment"
+            app:destination="@id/sendRequestFragment" />
+        <action
+            android:id="@+id/action_homeScreenFragment_to_setTherapy1Fragment"
+            app:destination="@id/setTherapy1Fragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/sendRequestFragment"
+        android:name="com.example.aplikace_rehabilitace.ui_.SendRequestFragment"
+        android:label="SendRequestFragment" />
+    <fragment
+        android:id="@+id/setTherapy1Fragment"
+        android:name="com.example.aplikace_rehabilitace.ui_.therapy.SetTherapy1Fragment"
+        android:label="SetTherapy1Fragment" >
+        <action
+            android:id="@+id/action_setTherapy1Fragment_to_setTherapy2Fragment"
+            app:destination="@id/setTherapy2Fragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/setTherapy2Fragment"
+        android:name="com.example.aplikace_rehabilitace.ui_.therapy.SetTherapy2Fragment"
+        android:label="SetTherapy2Fragment" />
 </navigation>
