--- a/Aplikace_rehabilitace/app/src/main/res/layout/fragment_send_request.xml
+++ b/Aplikace_rehabilitace/app/src/main/res/layout/fragment_send_request.xml
@@ -36,7 +36,7 @@
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/message"/>
+        app:srcCompat="@drawable/message" />
 
     <TextView
         android:id="@+id/textView3"
@@ -53,6 +53,35 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="@+id/imageView" />
+
+    <com.google.android.material.textfield.TextInputLayout
+
+        android:id="@+id/requestTextInput"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="16dp"
+        android:backgroundTint="@color/colorBlue"
+        android:hint="@string/napi_te_svoji_dost"
+        android:textColorHint="@color/colorBlue"
+        app:boxBackgroundMode="outline"
+        app:boxStrokeColor="@color/colorBlue"
+        app:boxStrokeWidth="1dp"
+        app:hintTextColor="@color/colorBlue"
+        app:layout_constraintBottom_toTopOf="@+id/textView6"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView">
+
+        <com.google.android.material.textfield.TextInputEditText
+
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="top" />
+    </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
         android:id="@+id/textView6"
