--- a/Aplikace_rehabilitace/app/src/main/res/values/colors.xml
+++ b/Aplikace_rehabilitace/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="colorBrown">#A48750</color>
     <color name="colorLightYellow">#fff8be</color>
     <color name="colorGray">#cac4d0</color>
+    <color name="colorLightBlueGray">#77A3D8</color>
 </resources>
