--- a/Aplikace_rehabilitace/app/src/main/res/layout/fragment_set_therapy2.xml
+++ b/Aplikace_rehabilitace/app/src/main/res/layout/fragment_set_therapy2.xml
@@ -68,10 +68,13 @@
         app:srcCompat="@drawable/surikaty_balonky" />
 
     <RadioGroup
+        android:id="@+id/countRadioGroup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
+        android:layout_marginBottom="16dp"
         android:gravity="center"
         android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@+id/sendRequestButton"
@@ -84,37 +87,61 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:backgroundTint="@color/colorBlack"
+            android:buttonTint="@color/colorBlue"
             android:checked="true"
+            android:drawableTint="@color/colorBlack"
+            android:foregroundTint="@color/colorBlack"
             android:text="1×"
-            />
+            android:textSize="18sp" />
 
         <RadioButton
             android:id="@+id/rb2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="2×" />
+            android:backgroundTint="@color/colorBlack"
+            android:buttonTint="@color/colorBlue"
+            android:drawableTint="@color/colorBlack"
+            android:foregroundTint="@color/colorBlack"
+            android:text="2×"
+            android:textSize="18sp" />
 
         <RadioButton
             android:id="@+id/rb3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="3×" />
+            android:backgroundTint="@color/colorBlack"
+            android:buttonTint="@color/colorBlue"
+            android:drawableTint="@color/colorBlack"
+            android:foregroundTint="@color/colorBlack"
+            android:text="3×"
+            android:textSize="18sp" />
 
         <RadioButton
             android:id="@+id/rb4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="4×" />
+            android:backgroundTint="@color/colorBlack"
+            android:buttonTint="@color/colorBlue"
+            android:drawableTint="@color/colorBlack"
+            android:foregroundTint="@color/colorBlack"
+            android:text="4×"
+            android:textSize="18sp" />
 
         <RadioButton
             android:id="@+id/rb5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="5×" />
+            android:backgroundTint="@color/colorBlack"
+            android:buttonTint="@color/colorBlue"
+            android:drawableTint="@color/colorBlack"
+            android:foregroundTint="@color/colorBlack"
+            android:text="5×"
+            android:textSize="18sp" />
     </RadioGroup>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
