--- a/Aplikace_rehabilitace/app/src/main/res/layout/fragment_therapy.xml
+++ b/Aplikace_rehabilitace/app/src/main/res/layout/fragment_therapy.xml
@@ -1,11 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
+    <data>
+        <variable
+            name="therapyHomeScreenViewModel"
+            type="com.example.aplikace_rehabilitace.ui_.account.TherapyHomeScreenViewModel" />
+    </data>
+
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui_.therapy.TherapyHomeScreenFragment">
+    tools:context=".ui_.account.TherapyHomeScreenFragment">
 
     <ImageView
         android:id="@+id/imageView6"
@@ -301,3 +309,5 @@
     </TableLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+</layout>
