--- a/Aplikace_rehabilitace/app/src/main/res/layout/fragment_add_patient.xml
+++ b/Aplikace_rehabilitace/app/src/main/res/layout/fragment_add_patient.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
+<data>
+    <variable
+        name="addPatientViewModel"
+        type="com.example.aplikace_rehabilitace.ui_.account.AddPatientViewModel" />
+</data>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -145,3 +151,4 @@
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
