--- a/Aplikace_rehabilitace/app/src/main/res/layout/fragment_add_patient.xml
+++ b/Aplikace_rehabilitace/app/src/main/res/layout/fragment_add_patient.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
-<data>
-    <variable
-        name="addPatientViewModel"
-        type="com.example.aplikace_rehabilitace.ui_.account.AddPatientViewModel" />
-</data>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools">
+    <data>
+        <variable
+            name="addPatientViewModel"
+            type="com.example.aplikace_rehabilitace.ui_.account.AddPatientViewModel" />
+    </data>
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -52,19 +53,6 @@
         app:srcCompat="@drawable/hedgehog" />
 
 
-    <Button
-        android:id="@+id/addUserButton2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
-        android:background="@drawable/roundcorner32"
-        android:padding="16dp"
-        android:text="@string/p_idat_pacienta"
-        android:textColor="@color/colorWhite"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/weightTextInputBox"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -79,7 +67,6 @@
         app:boxStrokeColor="@color/colorBlue"
         app:boxStrokeWidth="1dp"
         app:hintTextColor="@color/colorBlue"
-        app:layout_constraintBottom_toTopOf="@+id/addUserButton2"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -148,6 +135,15 @@
             android:layout_height="wrap_content" />
 
     </com.google.android.material.textfield.TextInputLayout>
+
+    <Button
+        android:id="@+id/pokusneTlacitko"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
