Zprovozněno klikání na položky v RecyclerView

--- a/Aplikace_rehabilitace/app/src/main/res/layout/fragment_therapy.xml
+++ b/Aplikace_rehabilitace/app/src/main/res/layout/fragment_therapy.xml
@@ -43,7 +43,7 @@
             app:layout_constraintStart_toStartOf="parent" />
 
         <ImageButton
-            android:id="@+id/imgbtnStartTherapy"
+            android:id="@+id/btnAddNewPatient"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="24dp"
