Přístup do databáze terapie zprovozněn (SetTherapy1)

--- a/Aplikace_rehabilitace/app/src/main/res/navigation/nav_graph.xml
+++ b/Aplikace_rehabilitace/app/src/main/res/navigation/nav_graph.xml
@@ -34,6 +34,9 @@
         <action
             android:id="@+id/action_homeScreenFragment_to_setTherapy1Fragment"
             app:destination="@id/setTherapy1Fragment" />
+        <action
+            android:id="@+id/action_homeScreenFragment_to_addPatientFragment"
+            app:destination="@id/addPatientFragment" />
     </fragment>
     <fragment
         android:id="@+id/sendRequestFragment"
