--- a/Aplikace_rehabilitace/app/src/main/res/layout/fragment_set_therapy1.xml
+++ b/Aplikace_rehabilitace/app/src/main/res/layout/fragment_set_therapy1.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools">
+    <data>
+        <variable
+            name="setTherapy1ViewModel"
+            type="com.example.aplikace_rehabilitace.ui_.therapy_settings.SetTherapy1ViewModel" />
+    </data>
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -63,11 +69,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
-        android:layout_marginBottom="32dp"
         android:fontFamily="@font/roboto"
         android:text="@string/pripravte_se_na_terapii"
         android:textAlignment="center"
-        app:layout_constraintBottom_toTopOf="@+id/sendRequestButton"
+        app:layout_constraintBottom_toTopOf="@+id/setTherapyButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView8" />
@@ -84,3 +89,4 @@
         app:srcCompat="@drawable/veverka" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
