--- a/Aplikace_rehabilitace/app/src/main/res/layout/fragment_set_therapy2.xml
+++ b/Aplikace_rehabilitace/app/src/main/res/layout/fragment_set_therapy2.xml
@@ -74,10 +74,9 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
-        android:layout_marginBottom="16dp"
         android:gravity="center"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@+id/sendRequestButton"
+        app:layout_constraintBottom_toTopOf="@+id/continue1Button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView8">
