--- a/Aplikace_rehabilitace/app/src/main/res/layout/item_time_of_exercise.xml
+++ b/Aplikace_rehabilitace/app/src/main/res/layout/item_time_of_exercise.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -32,11 +33,11 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
-
+            android:id="@+id/timeTextInputView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="top"
-            android:text="@string/_00_00"
+            android:text="00:00"
             android:textSize="20sp" />
 
     </com.google.android.material.textfield.TextInputLayout>
