--- a/Aplikace_rehabilitace/app/src/main/res/values/colors.xml
+++ b/Aplikace_rehabilitace/app/src/main/res/values/colors.xml
@@ -11,7 +11,7 @@
     <color name="colorGreenBlue">#50A49F</color>
     <color name="colorBrown">#A48750</color>
     <color name="colorLightYellow">#fff8be</color>
-    <color name="colorDarkYellow">#E4DEAB</color>
+    <color name="colorDarkYellow">#e9e3b1</color>
     <color name="colorGray">#cac4d0</color>
     <color name="colorLightBlueGray">#77A3D8</color>
 </resources>
