--- a/Aplikace_rehabilitace/app/src/main/res/values/themes.xml
+++ b/Aplikace_rehabilitace/app/src/main/res/values/themes.xml
@@ -32,4 +32,15 @@
         <item name="errorEnabled">true</item>
         <item name="hintTextColor">@color/colorBlue</item>
     </style>
+
+    <style name="TimeDialogTheme" parent="Theme.MaterialComponents.Light.Dialog.Bridge">
+        <item name="colorAccent">@color/colorYellow</item>
+        <item name="android:textColor">@color/colorBlack</item>
+        <item name="android:windowBackground">@color/colorYellow</item>
+        <item name="android:radius">16dp</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowSoftInputMode">adjustResize</item>
+    </style>
+
 </resources>
