--- a/Aplikace_rehabilitace/app/src/main/res/layout/item_exercise_position.xml
+++ b/Aplikace_rehabilitace/app/src/main/res/layout/item_exercise_position.xml
@@ -9,42 +9,25 @@
     android:padding="8dp">
 
     <TextView
-        android:id="@+id/textView9"
+        android:id="@+id/exerciseName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:fontFamily="@font/roboto"
         android:text="TextView"
         android:textColor="@color/colorBlack"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/imageButton3"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/imageButton2"
+        app:layout_constraintEnd_toStartOf="@+id/exerciseUncheckButton"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
-        android:id="@+id/imageButton2"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:background="@android:color/transparent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/textView9"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/pencil" />
-
-    <ImageButton
-        android:id="@+id/imageButton3"
+        android:id="@+id/exerciseUncheckButton"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:background="@android:color/transparent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/textView9"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/cross2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
