--- a/Aplikace_rehabilitace/app/src/main/res/layout/item_exercise_position.xml
+++ b/Aplikace_rehabilitace/app/src/main/res/layout/item_exercise_position.xml
@@ -37,8 +37,8 @@
 
     <ImageButton
         android:id="@+id/exerciseUncheckButton"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:background="@android:color/transparent"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
